[package]
name = "mapf_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3" }